added features Download dashboard CSV, Download logs CSV and View & delete logs

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('subjects') }}">Add Subject</a>
             <a href="{{ url_for('topics') }}">Add Topic</a>
+            <a href="{{ url_for('logs') }}">Logs</a>
             <a href="{{ url_for('dashboard') }}">Dashboard</a>
         </nav>
     </header>
